--- a/index.html
+++ b/index.html
@@ -85,6 +85,209 @@
       <section id="expertise" class="py-5 bg-light">
         <div class="container">
           <h2 class="mb-1">Mes compétences</h2>
+
+          <!-- Langage de programmation -->
+          <div class="row gy-4 mt-5">
+            <div class="col-12 col-md-7">
+              <!-- Progress bar -->
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fab fa-html5 fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">HTML5</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                        aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fab fa-css3-alt fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">CSS3</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-100" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="100%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fab fa-js fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">JS</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fab fa-php fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">PHP</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fab fa-sass fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">SASS</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
+            <div class="col-12 offset-md-1 col-md-4">
+              <img src="img/code.jpg" alt="écran montrant du code php" width="100%">
+            </div>
+          </div>
+
+          <!-- Frameworks -->
+          <div class="row gy-4 mt-5">
+            <div class="col-12 col-md-4">
+              <img src="img/design.jpg" alt="écran montrant des designs" width="100%">
+            </div>
+            <div class="col-12 offset-md-1 col-md-7">
+  
+              <!-- Progress bar -->
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fab fa-figma fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">Figma</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fas fa-photo-video fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">Suite Adobe</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-100" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="100%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fas fa-palette fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">Design UI</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fas fa-vial fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">Design UX</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fas fa-video fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">Vidéo</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <!-- </div> -->
+          </div>
+
         </div>
       </section>
       <!-- Compétences -->
