--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
-    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   </head>
@@ -347,7 +343,7 @@
                     Un réseau social avec des fonctionnalités de base et développé avec les technologies de base du web.
                   </p>
                   <!-- Offcanvas -->
-                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet1" aria-controls="offcanvasBottom">En savoir plus</button>
+                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet1" aria-controls="offcanvasBottom">Voir plus</button>
                   <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojet1" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
                       <h5 class="offcanvas-title" id="offcanvasBottomLabel">The Social Network</h5>
@@ -359,7 +355,7 @@
                         <div class="carousel-inner h-100">
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
                                   <img src="img/TSN/1.png"
-                                        class="d-block w-100" alt="Image slide 1">
+                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 1">
                                   <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 1</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
@@ -406,14 +402,64 @@
             <!-- TSN-2.0 -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <img src="img/TSN-2.0/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 2">
+                <img src="img/TSN-2.0/2.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 2">
                 <div class="card-body">
                   <h5 class="card-title">The Social Network - 2.0</h5>
                   <p class="card-text my-3">
                    Le réseau social "The Social Network" développé avec des technologies web avancées (Framework, API).
                   </p>
                   <!-- Offcanvas -->
-                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">En savoir plus</button>
+                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">Voir plus</button>
+                  <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojet2" aria-labelledby="offcanvasBottomLabel">
+                    <div class="offcanvas-header">
+                      <h5 class="offcanvas-title" id="offcanvasBottomLabel">The Social Network - 2.0</h5>
+                      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                      <!-- Caroussel -->
+                      <div id="carouselProject2" class="carousel slide shadow h-100" data-bs-ride="carousel" data-bs-touch="true">
+                        <div class="carousel-inner h-100">
+                              <div class="carousel-item h-100 active" data-bs-interval="10000">
+                                  <img src="img/TSN-2.0/2.png"
+                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 1">
+                                  <div class="carousel-caption d-none d-md-block">
+                                      <h5>Slide 1</h5>
+                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                          sollicitudin.</p>
+                                  </div>
+                              </div>
+                              <div class="carousel-item h-100" data-bs-interval="2000">
+                                  <img src="https://picsum.photos/1920/1080?random=21"
+                                        class="d-block w-100" alt="Image slide 2">
+                                  <div class="carousel-caption d-none d-md-block">
+                                      <h5>Slide 2</h5>
+                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                          sollicitudin.</p>
+                                  </div>
+                              </div>
+                              <div class="carousel-item h-100">
+                                  <img src="https://picsum.photos/1920/1080?random=31"
+                                        class="d-block w-100" alt="Image slide 3">
+                                  <div class="carousel-caption d-none d-md-block">
+                                      <h5>Slide 3</h5>
+                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                          sollicitudin.</p>
+                                  </div>
+                              </div>
+                          </div>
+                          <button class="carousel-control-prev" type="button"
+                                  data-bs-target="#carouselProject2" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                          </button>
+                          <button class="carousel-control-next" type="button"
+                                  data-bs-target="#carouselProject2" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                          </button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -429,7 +475,57 @@
                     Un logiciel de calcul d'itinéraires dans la ville de belfort et la région de bourgogne.
                   </p>
                   <!-- Offcanvas -->
-                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">En savoir plus</button>
+                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet3" aria-controls="offcanvasBottom">Voir plus</button>
+                  <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojet3" aria-labelledby="offcanvasBottomLabel">
+                    <div class="offcanvas-header">
+                      <h5 class="offcanvas-title" id="offcanvasBottomLabel">Itinerary planner</h5>
+                      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                      <!-- Caroussel -->
+                      <div id="carouselProject3" class="carousel slide shadow h-100" data-bs-ride="carousel" data-bs-touch="true">
+                        <div class="carousel-inner h-100">
+                              <div class="carousel-item h-100 active" data-bs-interval="10000">
+                                  <img src="img/IP/1.png"
+                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 1">
+                                  <div class="carousel-caption d-none d-md-block">
+                                      <h5>Slide 1</h5>
+                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                          sollicitudin.</p>
+                                  </div>
+                              </div>
+                              <div class="carousel-item h-100" data-bs-interval="2000">
+                                  <img src="https://picsum.photos/1920/1080?random=21"
+                                        class="d-block w-100" alt="Image slide 2">
+                                  <div class="carousel-caption d-none d-md-block">
+                                      <h5>Slide 2</h5>
+                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                          sollicitudin.</p>
+                                  </div>
+                              </div>
+                              <div class="carousel-item h-100">
+                                  <img src="https://picsum.photos/1920/1080?random=31"
+                                        class="d-block w-100" alt="Image slide 3">
+                                  <div class="carousel-caption d-none d-md-block">
+                                      <h5>Slide 3</h5>
+                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                          sollicitudin.</p>
+                                  </div>
+                              </div>
+                          </div>
+                          <button class="carousel-control-prev" type="button"
+                                  data-bs-target="#carouselProject3" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                          </button>
+                          <button class="carousel-control-next" type="button"
+                                  data-bs-target="#carouselProject3" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                          </button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
