--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                        aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                        aria-valuemax="100" data-bs-toggle="tooltip" title="60%">
                       </div>
                     </div>
                   </div>
@@ -135,8 +135,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-100" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="100%">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="65%">
                       </div>
                     </div>
                   </div>
@@ -154,8 +154,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="60%">
                       </div>
                     </div>
                   </div>
@@ -172,8 +172,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="70%">
                       </div>
                     </div>
                   </div>
@@ -190,8 +190,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="65%">
                       </div>
                     </div>
                   </div>
@@ -240,8 +240,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="60%">
                       </div>
                     </div>
                   </div>
@@ -258,8 +258,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-100" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="100%">
+                      <div class="progress-bar w-100" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
                       </div>
                     </div>
                   </div>
@@ -276,8 +276,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="60%">
                       </div>
                     </div>
                   </div>
@@ -294,8 +294,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="65%">
                       </div>
                     </div>
                   </div>
@@ -356,29 +356,29 @@
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
                                   <img src="img/TSN/1.png"
                                         class="d-block w-100 h-100 img-fluid" alt="Image slide 1">
-                                  <div class="carousel-caption d-none d-md-block">
+                                  <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 1</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
                                           sollicitudin.</p>
-                                  </div>
+                                  </div> -->
                               </div>
                               <div class="carousel-item h-100" data-bs-interval="2000">
                                   <img src="https://picsum.photos/1920/1080?random=21"
                                         class="d-block w-100" alt="Image slide 2">
-                                  <div class="carousel-caption d-none d-md-block">
+                                  <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 2</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
                                           sollicitudin.</p>
-                                  </div>
+                                  </div> -->
                               </div>
                               <div class="carousel-item h-100">
                                   <img src="https://picsum.photos/1920/1080?random=31"
                                         class="d-block w-100" alt="Image slide 3">
-                                  <div class="carousel-caption d-none d-md-block">
+                                  <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 3</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
                                           sollicitudin.</p>
-                                  </div>
+                                  </div> -->
                               </div>
                           </div>
                           <button class="carousel-control-prev" type="button"
@@ -422,29 +422,29 @@
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
                                   <img src="img/TSN-2.0/2.png"
                                         class="d-block w-100 h-100 img-fluid" alt="Image slide 1">
-                                  <div class="carousel-caption d-none d-md-block">
+                                  <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 1</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
                                           sollicitudin.</p>
-                                  </div>
+                                  </div> -->
                               </div>
                               <div class="carousel-item h-100" data-bs-interval="2000">
                                   <img src="https://picsum.photos/1920/1080?random=21"
                                         class="d-block w-100" alt="Image slide 2">
-                                  <div class="carousel-caption d-none d-md-block">
+                                  <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 2</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
                                           sollicitudin.</p>
-                                  </div>
+                                  </div> -->
                               </div>
                               <div class="carousel-item h-100">
                                   <img src="https://picsum.photos/1920/1080?random=31"
                                         class="d-block w-100" alt="Image slide 3">
-                                  <div class="carousel-caption d-none d-md-block">
+                                  <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 3</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
                                           sollicitudin.</p>
-                                  </div>
+                                  </div> -->
                               </div>
                           </div>
                           <button class="carousel-control-prev" type="button"
@@ -488,28 +488,28 @@
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
                                   <img src="img/IP/1.png"
                                         class="d-block w-100 h-100 img-fluid" alt="Image slide 1">
-                                  <div class="carousel-caption d-none d-md-block">
+                                  <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 1</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
                                           sollicitudin.</p>
-                                  </div>
+                                  </div> -->
                               </div>
                               <div class="carousel-item h-100" data-bs-interval="2000">
-                                  <img src="https://picsum.photos/1920/1080?random=21"
-                                        class="d-block w-100" alt="Image slide 2">
+                                  <img src="img/IP/2.png"
+                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 2">
                                   <div class="carousel-caption d-none d-md-block">
-                                      <h5>Slide 2</h5>
+                                      <!-- <h5>Slide 2</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p>
+                                          sollicitudin.</p> -->
                                   </div>
                               </div>
                               <div class="carousel-item h-100">
-                                  <img src="https://picsum.photos/1920/1080?random=31"
-                                        class="d-block w-100" alt="Image slide 3">
+                                  <img src="img/IP/3.png"
+                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 3">
                                   <div class="carousel-caption d-none d-md-block">
-                                      <h5>Slide 3</h5>
+                                      <!-- <h5>Slide 3</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p>
+                                          sollicitudin.</p> -->
                                   </div>
                               </div>
                           </div>
